# ProTrack

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03a75b2eba1b_fix_in_user_model_add_relationship.py  1df1a55d12b5_change_login_column_name_to_email_login.py  1f4debf7c11e_divide_username_user_model_and_email_.py  47635f52e24b_add_nullable_true_constraint_to_.py  5507759a42c0_change_tablename_of_userproject_model_.py  74a8fa8c4d7e_create_file_and_project_document_models_.py  8099e858b1bc_add_name_to_owner_id_foreignkey_.py  82d510f2bdb3_add_to_delete_attribute_to_file_model.py  9970c0e560ec_initial_migration.py  9bf79869702a_delete_file_model_and_make_only_one_.py  a6c9c91dc779_add_general_use_field_in_files_model.py  a9fb7218878c_create_name_for_unique_constraint.py  ad74ebd06c72_add_foreign_key_to_project_model_.py  b01a7bbb05aa_change_profile_constraint_in_user_from_.py  b503ca222133_change_timestamp_to_datetime_and_add_.py  cb5f3ee375db_delete_updated_at_field_from_project_.py  cb7d2b959110_replace_name_and_surname_by_first_name_.py  d01a6e607132_add_cascade_delete_constaint_to_user_vs_.py  de1772036c23_add_project_model.py  e089ff65c9c8_add_storage_used_bytes_attr_to_project_.py  ec8532ac03b2_add_unique_constraint_to_email_field_in_.py  fb6c83486f3a_delete_unusefull_relationship_note_fron_.py  fe70492f1484_add_user_project_model_roles_and_owner_.py
app/: config.py  db.py  exception_handlers.py  exceptions.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/core/: config.py  logger.py  (+4 more)
(+23 files in other folders)
